--- a/mmmm.css
+++ b/mmmm.css
@@ -1,5 +1,5 @@
 body {
-  background-color: #42f4d7;
+  background-color: #5697ff;
 }
 
 header {
@@ -7,5 +7,5 @@ header {
 }
 
 footer {
-  background-color: #ed7a00;
+  background-color: #5697ff;
 }
