--- a/mmmm.css
+++ b/mmmm.css
@@ -35,10 +35,10 @@ dropdown-content {
 
 dropdown-content a:hover {background-color: #f1f1f1}
 
-dropdown:hover .dropdown-content {
+dropdown:hover dropdown-content {
     display: block;
 }
 
-dropdown:hover .dropbtn {
+dropdown:hover dropbtn {
     background-color: #3e8e41;
 }
