--- a/mmmm.css
+++ b/mmmm.css
@@ -15,51 +15,8 @@ footer {
   background-color: #5697ff;
 }
 
-ul {
-    background-color: #4CAF50;
-    color: white;
-    padding: 16px;
-    font-size: 16px;
-    border: none;
-    cursor: pointer;
+.doggo {
+  background-color: #ff7300
+  border: 3px groove #FFF;
+  border-radius: 10px
 }
-
-ul:hover, ul:focus {
-    background-color: #3e8e41;
-}
-
-li {
-    position: relative;
-    display: inline-block;
-}
-
-li-content {
-    display: none;
-    position: absolute;
-    background-color: #f9f9f9;
-    min-width: 160px;
-    overflow: auto;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    z-index: 1;
-}
-
-li-content a {
-    color: black;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-}
-
-li a:hover {background-color: #f1f1f1}
-
-.show {display:block;}
-
-.main-nav li {
-  display: inline-block;
-}  
-
-.main-nav li ul {
-  display: none;
-}
-.main-nav li ul li {
-  display: block;}
