--- a/Market Revolution US History/stuff.css
+++ b/Market Revolution US History/stuff.css
@@ -1,7 +1,7 @@
 p {
     font-family: "Times New Roman", Georgia, Serif;
-    color: rgb(0, 145, 255);
+    color: rgb(0, 0, 0);
 }
 body {
-    background-image: url("");
+    background-image: url("https://firelevelone.github.io/angerydoggo-project/Market%20Revolution%20US%20History/background.JPG");
 }
