--- a/Market Revolution US History/stuff.css
+++ b/Market Revolution US History/stuff.css
@@ -1,3 +1,6 @@
+h1 {
+    font-family: "Georgia", Times New Roman, Serif;
+    color: rgb(2, 2, 249);
 p {
     font-family: "Times New Roman", Georgia, Serif;
     color: rgb(0, 0, 0);
