--- a/Market Revolution US History/stuff.css
+++ b/Market Revolution US History/stuff.css
@@ -6,5 +6,5 @@ p {
     color: rgb(0, 0, 0);
 }
 body {
-    background-image: url("https://firelevelone.github.io/angerydoggo-project/Market%20Revolution%20US%20History/background.JPG");
+    background-image: url("https://firelevelone.github.io/angerydoggo-project/Market%20Revolution%20US%20History/background.png");
 }
